--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,5 @@ services:
     environment:
       - TZ=America/Sao_Paulo
       - LOG_EXT=.txt
-    # - EXCLUDE_REGEX=.*(\.partial|\.tmp|\.swp|~)$   #OPTIONAL, in this exemple it excludes files ending with .partial, .tmp, .swp, or ~ (most common temporary files)
+    # - EXCLUDE_REGEX=.*(\.partial|\.tmp|\.swp|~|\.DS_Store)$   #OPTIONAL, in this exemple it excludes files ending with .partial, .tmp, .swp, or ~ (most common temporary files)
     restart: unless-stopped
